// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ClientApp]  Header  should display correctly when consulation has ended 1`] = `
<Fragment>
  <h1
    className="page-header__heading mt--0"
    data-qa-sel="changeable-page-header"
  >
    My title has changed
  </h1>
  <div
    className="mb--d"
  >
    <p
      className="container container-full ml--0"
    >
      <span>
        <span
          className="tag"
        >
          Closed for comments
        </span>
         
        This consultation 
        ended
         on 
        <t
          ago={false}
          calendar={false}
          date="1994-11-05T08:15:30-05:00"
          decimal={false}
          element="time"
          filter={[Function]}
          format="D MMMM YYYY"
          fromNow={false}
          interval={60000}
          onChange={[Function]}
          toNow={false}
          unit={null}
          unix={false}
          utc={false}
        />
         at
         
        <t
          ago={false}
          calendar={false}
          date="1994-11-05T08:15:30-05:00"
          decimal={false}
          element="time"
          filter={[Function]}
          format="HH:mm"
          fromNow={false}
          interval={60000}
          onChange={[Function]}
          toNow={false}
          unit={null}
          unix={false}
          utc={false}
        />
      </span>
        
      <Link
        replace={false}
        to="/leadinformation"
      >
        Request commenting lead permission
      </Link>
    </p>
  </div>
  <p>
    Subtitle 1
  </p>
</Fragment>
`;

exports[`[ClientApp]  Header  should display correctly when consulation hasn't started 1`] = `
<Fragment>
  <h1
    className="page-header__heading mt--0"
    data-qa-sel="changeable-page-header"
  >
    My title
  </h1>
  <div
    className="mb--d"
  >
    <p
      className="container container-full ml--0"
    >
      <span>
        <span
          className="tag"
        >
          Not yet open for comments
        </span>
         
        This consultation 
        starts
         on 
        <t
          ago={false}
          calendar={false}
          date=""
          decimal={false}
          element="time"
          filter={[Function]}
          format="D MMMM YYYY"
          fromNow={false}
          interval={60000}
          onChange={[Function]}
          toNow={false}
          unit={null}
          unix={false}
          utc={false}
        />
         at
         
        <t
          ago={false}
          calendar={false}
          date=""
          decimal={false}
          element="time"
          filter={[Function]}
          format="HH:mm"
          fromNow={false}
          interval={60000}
          onChange={[Function]}
          toNow={false}
          unit={null}
          unix={false}
          utc={false}
        />
      </span>
        
      <Link
        replace={false}
        to="/leadinformation"
      >
        Request commenting lead permission
      </Link>
    </p>
  </div>
  <p>
    Subtitle 1
  </p>
  <Alert
    role="alert"
    type="caution"
  >
    <p>
      Subtitle 2
    </p>
  </Alert>
</Fragment>
`;

exports[`[ClientApp]  Header  should display correctly when consulation is in progress 1`] = `
<Fragment>
  <h1
    className="page-header__heading mt--0"
    data-qa-sel="changeable-page-header"
  >
    My title
  </h1>
  <div
    className="mb--d"
  >
    <p
      className="container container-full ml--0"
    >
      <span>
        <span
          className="tag tag--open"
        >
          Open for comments
        </span>
         Open until
         
        <t
          ago={false}
          calendar={false}
          date="1994-11-05T08:15:30-05:00"
          decimal={false}
          element="time"
          filter={[Function]}
          format="D MMMM YYYY"
          fromNow={false}
          interval={60000}
          onChange={[Function]}
          toNow={false}
          unit={null}
          unix={false}
          utc={false}
        />
      </span>
        
      <Link
        replace={false}
        to="/leadinformation"
      >
        Request commenting lead permission
      </Link>
    </p>
  </div>
  <p>
    Subtitle 1
  </p>
</Fragment>
`;
